--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
         <div class="container">
             <main class="fade-in">
                 <h4 class="headline">
-                    Hello world 🚀, it's Nickolas Benakis,
+                    Hello world 🚀 it's Nickolas Benakis,
                 </h4>
-                <p class="tagline">a Software Engineer</p>
+                <p class="tagline">a Frontend Engineer</p>
                 <p>
                     I love to write JavaScript, especially when I can use it to
                     create awesome web applications. Recently I fell in love
