--- a/index.html
+++ b/index.html
@@ -5,79 +5,23 @@
         <title>Nickolas Benakis – Frontend Engineer</title>
         <meta
             name="description"
-            content="Hi I am Nickolas Benakis. Software Engineer"
+            content="Hi I am Nickolas Benakis. Frontend Engineer"
         />
         <meta name="theme-color" content="#008bb3" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="shortcut icon" href="./assets/batman.png" />
         <link rel="manifest" href="./manifest.webmanifest" />
-        <style>
-            html {
-                font-size: 62.5%;
-            }
-
-            body {
-                margin: 0;
-                color: #555;
-                font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-                    Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
-            }
-
-            .container {
-                height: 100vh;
-                box-sizing: border-box;
-                padding: 0.5rem;
-                display: grid;
-                align-items: center;
-                justify-content: center;
-            }
-
-            .headline {
-                font-size: 2rem;
-                color: #333;
-            }
-            .headline,
-            .tagline {
-                margin: 0;
-            }
-            main {
-                max-width: 50rem;
-            }
-
-            p {
-                font-size: 1.6rem;
-                line-height: 1.4;
-                margin-block-end: 0;
-            }
-
-            a {
-                color: #005b80;
-                text-decoration: none;
-                white-space: nowrap;
-            }
-            a:visited {
-                color: #9e00a0;
-            }
-
-            .fade-in.mounted {
-                opacity: 1;
-            }
-
-            .fade-in {
-                transition: opacity 1s ease-in;
-                opacity: 0.1;
-            }
-
-            .social {
-                display: inline-block;
-                margin-top: 1rem;
-                margin-right: 1rem;
-            }
-        </style>
+        <link rel="stylesheet" href="./index.scss" />
     </head>
     <body>
         <div class="container">
             <main class="fade-in">
+                <div class="wrapper">
+                    <input type="checkbox" id="switch" />
+                    <label for="switch" class="switch-label">
+                        <div class="toggle"></div>
+                    </label>
+                </div>
                 <h4 class="headline">
                     Hello world 🚀 it's Nickolas Benakis,
                 </h4>
@@ -92,7 +36,7 @@
                     <a target="_blank" href="http://www.afse.eu/">
                         AdvantageFSE
                     </a>
-                    ,a Software House specialized in web-banking products.
+                    , a Software house specialized in web banking products.
                 </p>
                 <p>
                     Previously, I've worked as a software engineer at
