Add installable configs

--- a/index.html
+++ b/index.html
@@ -33,15 +33,27 @@
                 </p>
                 <p>
                     Currently, I'm a frontend engineer at
-                    <a target="_blank" href="http://www.afse.eu/">
+                    <a
+                        target="_blank"
+                        href="http://www.afse.eu/"
+                        rel="noreferrer"
+                    >
                         AdvantageFSE
                     </a>
                     , a Software house specialized in web banking products.
                 </p>
                 <p>
                     Previously, I've worked as a software engineer at
-                    <a target="_blank" href="https://www.ey.com/en_gl">EY</a>
-                    and <a href="https://www.intrasoft-intl.com/"> Intrasoft</a>
+                    <a
+                        target="_blank"
+                        href="https://www.ey.com/en_gl"
+                        rel="noreferrer"
+                        >EY</a
+                    >
+                    and
+                    <a href="https://www.intrasoft-intl.com/" rel="noreferrer">
+                        Intrasoft</a
+                    >
                     .
                 </p>
                 <p>
