Add sw final stage

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         />
         <meta name="theme-color" content="#008bb3" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="apple-touch-icon" href="./assets/batman.png" />
         <link rel="shortcut icon" href="./assets/batman.png" />
         <link rel="manifest" href="./manifest.webmanifest" />
         <link rel="stylesheet" href="./index.scss" />
