--- a/index.html
+++ b/index.html
@@ -12,7 +12,32 @@
         <link rel="apple-touch-icon" href="./assets/batman.png" />
         <link rel="shortcut icon" href="./assets/batman.png" />
         <link rel="manifest" href="./manifest.webmanifest" />
-        <link rel="stylesheet" href="./index.scss" />
+        <link rel="stylesheet" href="./styles/index.scss" />
+        <script type="text/javascript">
+            if ('serviceWorker' in navigator) {
+                navigator.serviceWorker
+                    .register('sw.js')
+                    .then(registration =>
+                        console.log('Service Worker registered')
+                    )
+                    .catch(err => {
+                        console.log('SW registration failed', err);
+                    });
+            }
+            window.addEventListener('load', () => {
+                const el = document.querySelector('main');
+                el.classList.remove('mounted');
+                el.classList.add('mounted');
+                const toggle = document.getElementById('switch');
+                toggle.addEventListener('click', event => {
+                    if (event.currentTarget.checked) {
+                        document.body.classList.add('dark-mode');
+                    } else {
+                        document.body.classList.remove('dark-mode');
+                    }
+                });
+            });
+        </script>
     </head>
     <body>
         <div class="container">
@@ -88,6 +113,5 @@
                 </a>
             </main>
         </div>
-        <script src="index.js"></script>
     </body>
 </html>
