--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                     >
                         AdvantageFSE
                     </a>
-                    , a Software house specialized in web banking products.
+                    , a software house specialized in web & mobile banking
+                    products.
                 </p>
                 <p>
                     Previously, I've worked as a software engineer at
