--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     .
                 </p>
                 <p>
-                    I’m always excited to discover challenges, meet people.
+                    I’m always excited to discover new challenges, meet people.
                     <br />
                     Talk to me on social media:
                 </p>
