Remove node-sass, add parcel locally --save-dev, conv sass->css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <link rel="apple-touch-icon" href="./assets/batman.png" />
         <link rel="shortcut icon" href="./assets/batman.png" />
         <link rel="manifest" href="./manifest.webmanifest" />
-        <link rel="stylesheet" href="./styles/index.scss" />
+        <link rel="stylesheet" href="./styles/index.css" />
+        <link rel="stylesheet" href="./styles/toggle.css" />
         <script type="text/javascript">
             if ('serviceWorker' in navigator) {
                 navigator.serviceWorker
