Add css sprites

--- a/index.html
+++ b/index.html
@@ -89,29 +89,32 @@
                     <br />
                     Talk to me on social media:
                 </p>
-                <a href="https://twitter.com/nickolasbenakis" class="social">
-                    <img
-                        src="./assets/twitter.svg"
-                        alt="twitter-logo"
-                        style="width: 24px;height: 24px;"
-                    />
+                <a
+                    href="https://twitter.com/nickolasbenakis"
+                    class="social"
+                    aria-label="twitter account"
+                >
+                    <svg style="width: 24px;height: 24px;">
+                        <use xlink:href="./assets/sprite.svg#twitter" />
+                    </svg>
                 </a>
                 <a
                     href="https://www.linkedin.com/in/nickolas-benakis-a718baa8/"
                     class="social"
+                    aria-label="linkedin account"
                 >
-                    <img
-                        src="./assets/linkedin.svg"
-                        alt="linkedin-logo"
-                        style="width: 24px;height: 24px;"
-                    />
+                    <svg style="width: 24px;height: 24px;">
+                        <use xlink:href="./assets/sprite.svg#linkedin" />
+                    </svg>
                 </a>
-                <a href="https://github.com/NickolasBenakis" class="social">
-                    <img
-                        src="./assets/github.svg"
-                        alt="github-logo"
-                        style="width: 24px;height: 24px;"
-                    />
+                <a
+                    href="https://github.com/NickolasBenakis"
+                    class="social"
+                    aria-label="github account"
+                >
+                    <svg style="width: 24px;height: 24px;">
+                        <use xlink:href="./assets/sprite.svg#github" />
+                    </svg>
                 </a>
             </main>
         </div>
